<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fondonav"
    tools:context=".ui.asignarnota.AsignarNotasAlum">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/N2txtListaAlumnos"
        android:textAlignment="center"
        android:layout_marginVertical="20dp"
        android:paddingVertical="10dp"
        android:background="@color/purple_txts"
        android:textColor="@color/white"
        android:textStyle="bold"></TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:background="@drawable/efredformulario"
        android:orientation="vertical"
        android:padding="20dp">

        <Spinner
            android:id="@+id/spiANAAlumnos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog"></Spinner>
    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/purple_500" />
    <LinearLayout
        android:id="@+id/lytANA2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="10dp"
        android:padding="20dp"
        android:background="@drawable/efredformulario">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/N2txtAsignarNotas"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginVertical="10dp"
            ></TextView>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:helperText="@string/N2txtNotas"
            app:helperTextTextColor="@color/purple_500">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtANANota"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/N2edtIngresarNotas"
                android:cursorVisible="true"
                android:inputType="number"
                ></com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:id="@+id/divider2"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="20dp"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="?android:attr/listDivider" />
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:helperText="@string/N2txtDescripcion"
            app:helperTextTextColor="@color/purple_500">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtANADescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/N2edtIngresarDescripcion"
                android:cursorVisible="true"
                ></com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
        <ImageButton
            android:id="@+id/btnANAHablar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_hablar"
            android:padding="5dp"
            android:background="@drawable/efredbotones2"
            android:layout_gravity="right"
            android:layout_marginRight="20dp"></ImageButton>


    </LinearLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnANAListo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/N2btnCalificar"
        android:background="@drawable/efredbotones"
        app:icon="@drawable/ic_listo"
        ></com.google.android.material.button.MaterialButton>

    <Button
        android:id="@+id/btnANASalir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/N2btnSalir"
        android:background="@drawable/efredbotones"
        ></Button>

</LinearLayout>