<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".ui.IniciarSesion.iniciarsesion">
    <ImageView
        android:layout_width="306dp"
        android:layout_height="126dp"
        android:layout_gravity="center"
        android:src="@drawable/logo"
        android:scaleType="centerCrop"
        android:layout_marginTop="40dp"></ImageView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/efredformulario"
        android:layout_marginTop="45dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ISBienvenida"
            android:layout_marginVertical="30dp"
            android:textAlignment="center"
            android:textStyle="bold"

            ></TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="40dp"
            android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ISCorreo"
                    android:layout_marginBottom="10dp"></TextView>
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:helperText="@string/ISCorreo"
                    app:helperTextTextColor="@color/purple_500">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtISCorreo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/ISedtCorreo"
                        android:cursorVisible="true"
                        android:text="geovaDT"
                        ></com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ISContrasena"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"></TextView>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:helperText="@string/ISContrasena"
                app:helperTextTextColor="@color/purple_500"
                app:counterMaxLength="15"
                app:counterEnabled="true">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtISContraseña"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ISedtContrasena"
                    android:cursorVisible="true"
                    android:inputType="textPassword"
                    android:text="1000"
                    ></com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

    </LinearLayout>
    <Button
        android:id="@+id/btnISIniciarsesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/efredbotones"
        android:layout_gravity="center"
        android:text="@string/ISbtn"
        android:layout_marginVertical="20dp"></Button>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:id="@+id/txtClicRegistro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/IStxtregis"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:layout_marginVertical="10dp"
            android:layout_marginRight="50dp"
            ></TextView>
        <TextView
            android:id="@+id/txtClicPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/IStxtpass"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:layout_marginVertical="10dp"
            android:layout_marginLeft="50dp"
            ></TextView>

    </LinearLayout>

</LinearLayout>