<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#7B64FD"
    tools:context=".ui.recuperar.password"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/txt_restablecer_pwd"
        android:fontFamily="sans-serif"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:gravity="center"
        />
    <ImageView
        android:id="@+id/imageview_profile"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_resetpassword"
        android:scaleType="centerCrop"
        android:background="#7B64FD"
        android:layout_gravity="center"
        android:layout_marginVertical="50dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg2"
        android:orientation="vertical"
        android:paddingVertical="30dp"
        android:paddingHorizontal="30dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_comentario_pwd"
                android:textSize="18sp"
                android:padding="5dp"
                android:fontFamily="sans-serif"
                android:textStyle="bold"
                android:layout_marginBottom="20dp"
                />

            <EditText
                android:id="@+id/edt_correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/txt_correo_electronico"
                android:layout_marginBottom="10dp"
                android:textSize="20sp"
                />
        </LinearLayout>


        <Button
            android:id="@+id/btn_restablecer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_restablecer"
            android:background="@drawable/efredbuttons"
            android:textColor="@color/white"
            android:layout_marginBottom="10dp"
            />

        <Button
            android:id="@+id/btn_cancelar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_cancelar"
            android:background="@drawable/efredbuttonsv2"
            android:textColor="@color/white"
            />
    </LinearLayout>

</LinearLayout>