<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.consolidado.Consolidado">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/N3txtConsolidado"
        android:textAlignment="center"
        android:layout_marginVertical="40dp"
        android:paddingVertical="10dp"
        android:background="@color/purple_txts"
        android:textColor="@color/white"
        android:textStyle="bold"></TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="10dp"
        android:padding="20dp"
        android:background="@drawable/efredformulario2">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/N3txtSeleccionarCurso"
            android:textAlignment="textStart"
            android:textStyle="bold"
            android:layout_marginVertical="20dp"
            ></TextView>
        <Spinner
            android:id="@+id/spiCCursos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog">
        </Spinner>
        <View
            android:id="@+id/divider3"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="40dp"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/N3txtNumEstudiantes"
            android:textAlignment="textStart"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"
            android:visibility="gone"
            ></TextView>
        <TextView
            android:id="@+id/txtCNumEstudiantes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="---"
            android:visibility="gone"

            >
        </TextView>
        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/listCONSO"></ListView>


    </LinearLayout>
</LinearLayout>